# evolve

./: .eslintrc.js  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  index.html  package.json  tailwind.config.js
config/: index.js
src/: App.vue  main.js
src/assets/models/orange/: scene.gltf
src/assets/models/sheep/: scene.gltf
src/components/Blob/: Blob.vue
src/components/Icon/: Icon.vue  IconGithub.vue  IconPause.vue  IconPlay.vue  IconRewind.vue  IconStop.vue
src/components/Modal/: Modal.vue
src/components/Model/: Model.vue
src/components/NotFound/: NotFound.vue
src/mixins/: generateMixin.vue
src/modules/: Controls.vue  Root.vue  foodCycle.worker.js  lifeCycle.worker.js
src/router/: index.js
src/store/: index.js
src/store/modules/simulation/: index.js
src/styles/: app.scss
src/utils/: consts.js  myRBush.js  pickHelper.js
src/wasm/: Cargo.toml
src/wasm/src/: lib.rs
src/workers/: food.worker.js  index.js  life.worker.js  mating.worker.js
