[package]
name = "hello"
version = "0.1.0"
authors = ["Quentin <hausser.quentin@gmail.com>"]
edition = "2018"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3.37", features = ['console', 'Worker'] }
rand = "0.7.3"
getrandom = { version = "0.1", features = ["wasm-bindgen"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
lto = true